# serializer version: 1
# name: test_build_hr[build-hr-cluster10-invalid-paths]
  ''
# ---
# name: test_build_hr[build-hr-cluster3]
  '''
  ---
  # Source: podinfo/templates/redis/config.yaml
  apiVersion: v1
  kind: ConfigMap
  metadata:
    name: podinfo-redis
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  data:
    redis.conf: |
      maxmemory 64mb
      maxmemory-policy allkeys-lru
      save ""
      appendonly no
  ---
  # Source: podinfo/templates/redis/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo-redis
    labels:
      app: podinfo-redis
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  spec:
    type: ClusterIP
    selector:
      app: podinfo-redis
    ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  ---
  # Source: podinfo/templates/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.8.0
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.8.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '2'
      internal.config.kubernetes.io/index: '2'
  spec:
    type: ClusterIP
    ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
    selector:
      app.kubernetes.io/name: podinfo
  ---
  # Source: podinfo/templates/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.8.0
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.8.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '3'
      internal.config.kubernetes.io/index: '3'
  spec:
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: podinfo
    template:
      metadata:
        labels:
          app.kubernetes.io/name: podinfo
        annotations:
          prometheus.io/scrape: "true"
          prometheus.io/port: "9898"
      spec:
        terminationGracePeriodSeconds: 30
        containers:
        - name: podinfo
          image: "ghcr.io/stefanprodan/podinfo:6.8.0"
          imagePullPolicy: IfNotPresent
          command:
          - ./podinfo
          - --port=9898
          - --cert-path=/data/cert
          - --port-metrics=9797
          - --grpc-port=9999
          - --grpc-service-name=podinfo
          - --cache-server=tcp://podinfo-redis:6379
          - --level=info
          - --random-delay=false
          - --random-error=false
          env:
          - name: PODINFO_UI_COLOR
            value: "#34577c"
          ports:
          - name: http
            containerPort: 9898
            protocol: TCP
          - name: http-metrics
            containerPort: 9797
            protocol: TCP
          - name: grpc
            containerPort: 9999
            protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
        volumes:
        - name: data
          emptyDir: {}
  ---
  # Source: podinfo/templates/redis/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo-redis
    labels:
      app: podinfo-redis
    annotations:
      config.kubernetes.io/index: '4'
      internal.config.kubernetes.io/index: '4'
  spec:
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: podinfo-redis
    template:
      metadata:
        labels:
          app: podinfo-redis
        annotations:
          checksum/config: "34c601c9d39797bbf53d1c7a278976609301f637ec11dc0253563729dfad4f8e"
      spec:
        containers:
        - name: redis
          image: "public.ecr.aws/docker/library/redis:7.0.6"
          imagePullPolicy: IfNotPresent
          command:
          - redis-server
          - "/redis-master/redis.conf"
          ports:
          - name: redis
            containerPort: 6379
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: redis
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - redis-cli
              - ping
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
          - mountPath: /var/lib/redis
            name: data
          - mountPath: /redis-master
            name: config
        volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: podinfo-redis
            items:
            - key: redis.conf
              path: redis.conf
  ---
  # Source: podinfo/templates/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.8.0
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.8.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '5'
      internal.config.kubernetes.io/index: '5'
  spec:
    ingressClassName: nginx
    rules:
    - host: "podinfo.local"
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: podinfo
              port:
                number: 9898
  
  
  '''
# ---
# name: test_build_hr[build-hr-single-cluster6]
  '''
  ---
  # Source: renovate/templates/serviceaccount.yaml
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: renovate
    labels:
      helm.sh/chart: renovate-37.64.3
      app.kubernetes.io/name: renovate
      app.kubernetes.io/instance: renovate
      app.kubernetes.io/version: "37.64.3"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  ---
  # Source: renovate/templates/cronjob.yaml
  apiVersion: batch/v1
  kind: CronJob
  metadata:
    name: renovate
    labels:
      helm.sh/chart: renovate-37.64.3
      app.kubernetes.io/name: renovate
      app.kubernetes.io/instance: renovate
      app.kubernetes.io/version: "37.64.3"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  spec:
    schedule: "0 1 * * *"
    jobTemplate:
      metadata:
        labels:
          app.kubernetes.io/name: renovate
          app.kubernetes.io/instance: renovate
      spec:
        template:
          metadata:
            labels:
              app.kubernetes.io/name: renovate
              app.kubernetes.io/instance: renovate
          spec:
            serviceAccountName: renovate
            restartPolicy: Never
            containers:
            - name: renovate
              image: "ghcr.io/renovatebot/renovate:37.64.3"
              imagePullPolicy: IfNotPresent
              env:
              - name: RENOVATE_CONFIG_FILE
                value: /dev/null
              envFrom:
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                  - ALL
              resources:
                limits:
                  cpu: 1000m
                  memory: 2G
                requests:
                  cpu: 100m
                  memory: 256Mi
            volumes:
            securityContext:
              fsGroup: 1000
              fsGroupChangePolicy: Always
              runAsNonRoot: true
              runAsUser: 1000
              seccompProfile:
                type: RuntimeDefault
  
  
  '''
# ---
# name: test_build_hr[build-hr-single-cluster7]
  '''
  ---
  # Source: ingress-nginx/templates/controller-serviceaccount.yaml
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  automountServiceAccountToken: true
  ---
  # Source: ingress-nginx/templates/controller-configmap.yaml
  apiVersion: v1
  kind: ConfigMap
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  data:
  ---
  # Source: ingress-nginx/templates/clusterrole.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
    name: ingress-nginx
    annotations:
      config.kubernetes.io/index: '2'
      internal.config.kubernetes.io/index: '2'
  rules:
  - apiGroups:
    - ""
    resources:
    - configmaps
    - endpoints
    - nodes
    - pods
    - secrets
    - namespaces
    verbs:
    - list
    - watch
  - apiGroups:
    - coordination.k8s.io
    resources:
    - leases
    verbs:
    - list
    - watch
  - apiGroups:
    - ""
    resources:
    - nodes
    verbs:
    - get
  - apiGroups:
    - ""
    resources:
    - services
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - ""
    resources:
    - events
    verbs:
    - create
    - patch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses/status
    verbs:
    - update
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingressclasses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - discovery.k8s.io
    resources:
    - endpointslices
    verbs:
    - list
    - watch
    - get
  ---
  # Source: ingress-nginx/templates/clusterrolebinding.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
    name: ingress-nginx
    annotations:
      config.kubernetes.io/index: '3'
      internal.config.kubernetes.io/index: '3'
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: ingress-nginx
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx
    namespace: flux-system
  ---
  # Source: ingress-nginx/templates/controller-role.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '4'
      internal.config.kubernetes.io/index: '4'
  rules:
  - apiGroups:
    - ""
    resources:
    - namespaces
    verbs:
    - get
  - apiGroups:
    - ""
    resources:
    - configmaps
    - pods
    - secrets
    - endpoints
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - ""
    resources:
    - services
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses
    verbs:
    - get
    - list
    - watch
  # Omit Ingress status permissions if `--update-status` is disabled.
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses/status
    verbs:
    - update
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingressclasses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - coordination.k8s.io
    resources:
    - leases
    resourceNames:
    - ingress-nginx-leader
    verbs:
    - get
    - update
  - apiGroups:
    - coordination.k8s.io
    resources:
    - leases
    verbs:
    - create
  - apiGroups:
    - ""
    resources:
    - events
    verbs:
    - create
    - patch
  - apiGroups:
    - discovery.k8s.io
    resources:
    - endpointslices
    verbs:
    - list
    - watch
    - get
  ---
  # Source: ingress-nginx/templates/controller-rolebinding.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '5'
      internal.config.kubernetes.io/index: '5'
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ingress-nginx
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx
    namespace: flux-system
  ---
  # Source: ingress-nginx/templates/controller-service-webhook.yaml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller-admission
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '6'
      internal.config.kubernetes.io/index: '6'
  spec:
    type: ClusterIP
    ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
    selector:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: controller
  ---
  # Source: ingress-nginx/templates/controller-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '7'
      internal.config.kubernetes.io/index: '7'
  spec:
    type: LoadBalancer
    ipFamilyPolicy: SingleStack
    ipFamilies:
    - IPv4
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
    selector:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: controller
  ---
  # Source: ingress-nginx/templates/controller-deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: flux-system
    annotations:
      config.kubernetes.io/index: '8'
      internal.config.kubernetes.io/index: '8'
  spec:
    selector:
      matchLabels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/component: controller
    replicas: 1
    revisionHistoryLimit: 10
    minReadySeconds: 0
    template:
      metadata:
        labels:
          helm.sh/chart: ingress-nginx-4.14.1
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: "1.14.1"
          app.kubernetes.io/part-of: ingress-nginx
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: controller
      spec:
        dnsPolicy: ClusterFirst
        containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.14.1@sha256:f95a79b85fb93ac3de752c71a5c27d5ceae10a18b61904dec224c1c6a4581e47
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - /wait-shutdown
          args:
          - /nginx-ingress-controller
          - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
          - --election-id=ingress-nginx-leader
          - --controller-class=k8s.io/ingress-nginx
          - --ingress-class=nginx
          - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
          - --validating-webhook=:8443
          - --validating-webhook-certificate=/usr/local/certificates/cert
          - --validating-webhook-key=/usr/local/certificates/key
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 82
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            readOnlyRootFilesystem: false
          env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: LD_PRELOAD
            value: /usr/local/lib/libmimalloc.so
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: https
            containerPort: 443
            protocol: TCP
          - name: webhook
            containerPort: 8443
            protocol: TCP
          volumeMounts:
          - name: webhook-cert
            mountPath: /usr/local/certificates/
            readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
        nodeSelector:
          kubernetes.io/os: linux
        serviceAccountName: ingress-nginx
        automountServiceAccountToken: true
        terminationGracePeriodSeconds: 300
        volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission
  ---
  # Source: ingress-nginx/templates/controller-ingressclass.yaml
  apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: nginx
    annotations:
      config.kubernetes.io/index: '9'
      internal.config.kubernetes.io/index: '9'
  spec:
    controller: k8s.io/ingress-nginx
  ---
  # Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
  # before changing this value, check the required kubernetes version
  # https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#prerequisites
  apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
    name: ingress-nginx-admission
    annotations:
      config.kubernetes.io/index: '10'
      internal.config.kubernetes.io/index: '10'
  webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
    - v1
    clientConfig:
      service:
        name: ingress-nginx-controller-admission
        namespace: flux-system
        port: 443
        path: /networking/v1/ingresses
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/serviceaccount.yaml
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: ingress-nginx-admission
    namespace: flux-system
    annotations:
      "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '11'
      internal.config.kubernetes.io/index: '11'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  automountServiceAccountToken: true
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/clusterrole.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: ingress-nginx-admission
    annotations:
      "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '12'
      internal.config.kubernetes.io/index: '12'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  rules:
  - apiGroups:
    - admissionregistration.k8s.io
    resources:
    - validatingwebhookconfigurations
    verbs:
    - get
    - update
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/clusterrolebinding.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: ingress-nginx-admission
    annotations:
      "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '13'
      internal.config.kubernetes.io/index: '13'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: ingress-nginx-admission
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx-admission
    namespace: flux-system
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/role.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: ingress-nginx-admission
    namespace: flux-system
    annotations:
      "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '14'
      internal.config.kubernetes.io/index: '14'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  rules:
  - apiGroups:
    - ""
    resources:
    - secrets
    verbs:
    - get
    - create
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/rolebinding.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: ingress-nginx-admission
    namespace: flux-system
    annotations:
      "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '15'
      internal.config.kubernetes.io/index: '15'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ingress-nginx-admission
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx-admission
    namespace: flux-system
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/job-createSecret.yaml
  apiVersion: batch/v1
  kind: Job
  metadata:
    name: ingress-nginx-admission-create
    namespace: flux-system
    annotations:
      "helm.sh/hook": pre-install,pre-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '16'
      internal.config.kubernetes.io/index: '16'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  spec:
    ttlSecondsAfterFinished: 0
    template:
      metadata:
        name: ingress-nginx-admission-create
        labels:
          helm.sh/chart: ingress-nginx-4.14.1
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: "1.14.1"
          app.kubernetes.io/part-of: ingress-nginx
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: admission-webhook
      spec:
        containers:
        - name: create
          image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.5@sha256:03a00eb0e255e8a25fa49926c24cde0f7e12e8d072c445cdf5136ec78b546285
          imagePullPolicy: IfNotPresent
          args:
          - create
          - --host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.$(POD_NAMESPACE).svc
          - --namespace=$(POD_NAMESPACE)
          - --secret-name=ingress-nginx-admission
          env:
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
        restartPolicy: OnFailure
        serviceAccountName: ingress-nginx-admission
        automountServiceAccountToken: true
        nodeSelector:
          kubernetes.io/os: linux
  ---
  # Source: ingress-nginx/templates/admission-webhooks/job-patch/job-patchWebhook.yaml
  apiVersion: batch/v1
  kind: Job
  metadata:
    name: ingress-nginx-admission-patch
    namespace: flux-system
    annotations:
      "helm.sh/hook": post-install,post-upgrade
      "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
      config.kubernetes.io/index: '17'
      internal.config.kubernetes.io/index: '17'
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: "1.14.1"
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  spec:
    ttlSecondsAfterFinished: 0
    template:
      metadata:
        name: ingress-nginx-admission-patch
        labels:
          helm.sh/chart: ingress-nginx-4.14.1
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: "1.14.1"
          app.kubernetes.io/part-of: ingress-nginx
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: admission-webhook
      spec:
        containers:
        - name: patch
          image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.5@sha256:03a00eb0e255e8a25fa49926c24cde0f7e12e8d072c445cdf5136ec78b546285
          imagePullPolicy: IfNotPresent
          args:
          - patch
          - --webhook-name=ingress-nginx-admission
          - --namespace=$(POD_NAMESPACE)
          - --patch-mutating=false
          - --secret-name=ingress-nginx-admission
          - --patch-failure-policy=Fail
          env:
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
        restartPolicy: OnFailure
        serviceAccountName: ingress-nginx-admission
        automountServiceAccountToken: true
        nodeSelector:
          kubernetes.io/os: linux
  
  
  '''
# ---
# name: test_build_hr[build-hr-single-cluster8]
  '''
  ---
  # Source: podinfo/templates/redis/config.yaml
  apiVersion: v1
  kind: ConfigMap
  metadata:
    name: podinfo-redis
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  data:
    redis.conf: |
      maxmemory 64mb
      maxmemory-policy allkeys-lru
      save ""
      appendonly no
  ---
  # Source: podinfo/templates/redis/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo-redis
    labels:
      app: podinfo-redis
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  spec:
    type: ClusterIP
    selector:
      app: podinfo-redis
    ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  ---
  # Source: podinfo/templates/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.5.4
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.5.4"
      app.kubernetes.io/managed-by: Helm
    annotations:
      app.kubernetes.io/name=[backend]: ..PLACEHOLDER_escape-special-chars-path..
      config.kubernetes.io/index: '2'
      internal.config.kubernetes.io/index: '2'
  spec:
    type: ClusterIP
    ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
    selector:
      app.kubernetes.io/name: podinfo
  ---
  # Source: podinfo/templates/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.5.4
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.5.4"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '3'
      internal.config.kubernetes.io/index: '3'
  spec:
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: podinfo
    template:
      metadata:
        labels:
          app.kubernetes.io/name: podinfo
        annotations:
          prometheus.io/scrape: "true"
          prometheus.io/port: "9898"
      spec:
        terminationGracePeriodSeconds: 30
        containers:
        - name: podinfo
          image: "ghcr.io/stefanprodan/podinfo:6.5.4"
          imagePullPolicy: IfNotPresent
          command:
          - ./podinfo
          - --port=9898
          - --cert-path=/data/cert
          - --port-metrics=9797
          - --grpc-port=9999
          - --grpc-service-name=podinfo
          - --cache-server=tcp://podinfo-redis:6379
          - --level=info
          - --random-delay=false
          - --random-error=false
          env:
          - name: PODINFO_UI_COLOR
            value: "#34577c"
          ports:
          - name: http
            containerPort: 9898
            protocol: TCP
          - name: http-metrics
            containerPort: 9797
            protocol: TCP
          - name: grpc
            containerPort: 9999
            protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
        volumes:
        - name: data
          emptyDir: {}
  ---
  # Source: podinfo/templates/redis/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo-redis
    labels:
      app: podinfo-redis
    annotations:
      config.kubernetes.io/index: '4'
      internal.config.kubernetes.io/index: '4'
  spec:
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: podinfo-redis
    template:
      metadata:
        labels:
          app: podinfo-redis
        annotations:
          checksum/config: "34c601c9d39797bbf53d1c7a278976609301f637ec11dc0253563729dfad4f8e"
      spec:
        containers:
        - name: redis
          image: "public.ecr.aws/docker/library/redis:7.0.6"
          imagePullPolicy: IfNotPresent
          command:
          - redis-server
          - "/redis-master/redis.conf"
          ports:
          - name: redis
            containerPort: 6379
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: redis
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - redis-cli
              - ping
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
          - mountPath: /var/lib/redis
            name: data
          - mountPath: /redis-master
            name: config
        volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: podinfo-redis
            items:
            - key: redis.conf
              path: redis.conf
  ---
  # Source: podinfo/templates/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.5.4
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.5.4"
      app.kubernetes.io/managed-by: Helm
    annotations:
      azure.workload.identity/client-id: ..PLACEHOLDER_dot-notated-target-path..
      config.kubernetes.io/index: '5'
      internal.config.kubernetes.io/index: '5'
  spec:
    ingressClassName: nginx
    rules:
    - host: "podinfo.production"
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: podinfo
              port:
                number: 9898
  
  
  '''
# ---
# name: test_build_hr[build-hr-single-cluster9]
  '''
  ---
  # Source: podinfo/templates/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.7.1
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.7.1"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  spec:
    type: ClusterIP
    ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
    selector:
      app.kubernetes.io/name: podinfo
  ---
  # Source: podinfo/templates/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.7.1
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: "6.7.1"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  spec:
    replicas: 2
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: podinfo
    template:
      metadata:
        labels:
          app.kubernetes.io/name: podinfo
        annotations:
          prometheus.io/scrape: "true"
          prometheus.io/port: "9898"
      spec:
        terminationGracePeriodSeconds: 30
        containers:
        - name: podinfo
          image: "ghcr.io/stefanprodan/podinfo:6.7.1"
          imagePullPolicy: IfNotPresent
          command:
          - ./podinfo
          - --port=9898
          - --cert-path=/data/cert
          - --port-metrics=9797
          - --grpc-port=9999
          - --grpc-service-name=podinfo
          - --level=info
          - --random-delay=false
          - --random-error=false
          env:
          - name: PODINFO_UI_COLOR
            value: "#34577c"
          ports:
          - name: http
            containerPort: 9898
            protocol: TCP
          - name: http-metrics
            containerPort: 9797
            protocol: TCP
          - name: grpc
            containerPort: 9999
            protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
        volumes:
        - name: data
          emptyDir: {}
  
  
  '''
# ---
# name: test_build_hr[build-hr-single]
  '''
  ---
  # Source: weave-gitops/templates/network-policy.yaml
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-ingress
    namespace: weave
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    ingress:
    - ports:
      - port: 9001
        protocol: TCP
    policyTypes:
    - Ingress
  ---
  # Source: weave-gitops/templates/network-policy.yaml
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-egress
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    egress:
    - {}
    policyTypes:
    - Egress
  ---
  # Source: weave-gitops/templates/serviceaccount.yaml
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '2'
      internal.config.kubernetes.io/index: '2'
  ---
  # Source: weave-gitops/templates/role.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: weave-gitops
    annotations:
      config.kubernetes.io/index: '3'
      internal.config.kubernetes.io/index: '3'
  rules:
  # impersonation rules for ui calls
  - apiGroups: [""]
    resources: ["users", "groups"]
    verbs: ["impersonate"]
  # Access to enterprise entitlement
  - apiGroups: [""]
    resources: ["secrets"]
    verbs: ["get", "list"]
    # or should return the first non-falsy result
    resourceNames: ["cluster-user-auth", "oidc-auth"]
  # The service account needs to read namespaces to know where it can query
  - apiGroups: [""]
    resources: ["namespaces"]
    verbs: ["get", "list", "watch"]
  # The service account needs to list custom resources to query if given feature
  # is available or not.
  - apiGroups: ["apiextensions.k8s.io"]
    resources: ["customresourcedefinitions"]
    verbs: ["list"]
  ---
  # Source: weave-gitops/templates/rolebinding.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: weave-gitops
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '4'
      internal.config.kubernetes.io/index: '4'
  subjects:
  - kind: ServiceAccount
    name: weave-gitops
    namespace: weave
  roleRef:
    kind: ClusterRole
    name: weave-gitops
    apiGroup: rbac.authorization.k8s.io
  ---
  # Source: weave-gitops/templates/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '5'
      internal.config.kubernetes.io/index: '5'
  spec:
    type: ClusterIP
    ports:
    - port: 9001
      targetPort: http
      protocol: TCP
      name: http
    selector:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  ---
  # Source: weave-gitops/templates/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: weave-gitops
      weave.works/app: weave-gitops-oss
    annotations:
      config.kubernetes.io/index: '6'
      internal.config.kubernetes.io/index: '6'
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    template:
      metadata:
        labels:
          app.kubernetes.io/name: weave-gitops
          app.kubernetes.io/instance: weave-gitops
          app.kubernetes.io/part-of: weave-gitops
          weave.works/app: weave-gitops-oss
      spec:
        serviceAccountName: weave-gitops
        containers:
        - name: weave-gitops
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/weaveworks/wego-app:v0.38.0"
          imagePullPolicy: IfNotPresent
          args:
          - "--log-level"
          - "info"
          - "--insecure"
          ports:
          - name: http
            containerPort: 9001
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          env:
          - name: WEAVE_GITOPS_FEATURE_TENANCY
            value: "true"
          - name: WEAVE_GITOPS_FEATURE_CLUSTER
            value: "false"
          - name: WEAVE_GITOPS_FEATURE_GITOPS_RUNTIME
            value: "false"
          resources: {}
  
  
  '''
# ---
# name: test_build_hr[build-hr]
  '''
  ---
  # Source: weave-gitops/templates/network-policy.yaml
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-ingress
    namespace: weave
    annotations:
      config.kubernetes.io/index: '0'
      internal.config.kubernetes.io/index: '0'
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    ingress:
    - ports:
      - port: 9001
        protocol: TCP
    policyTypes:
    - Ingress
  ---
  # Source: weave-gitops/templates/network-policy.yaml
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-egress
    annotations:
      config.kubernetes.io/index: '1'
      internal.config.kubernetes.io/index: '1'
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    egress:
    - {}
    policyTypes:
    - Egress
  ---
  # Source: weave-gitops/templates/serviceaccount.yaml
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '2'
      internal.config.kubernetes.io/index: '2'
  ---
  # Source: weave-gitops/templates/role.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: weave-gitops
    annotations:
      config.kubernetes.io/index: '3'
      internal.config.kubernetes.io/index: '3'
  rules:
  # impersonation rules for ui calls
  - apiGroups: [""]
    resources: ["users", "groups"]
    verbs: ["impersonate"]
  # Access to enterprise entitlement
  - apiGroups: [""]
    resources: ["secrets"]
    verbs: ["get", "list"]
    # or should return the first non-falsy result
    resourceNames: ["cluster-user-auth", "oidc-auth"]
  # The service account needs to read namespaces to know where it can query
  - apiGroups: [""]
    resources: ["namespaces"]
    verbs: ["get", "list", "watch"]
  # The service account needs to list custom resources to query if given feature
  # is available or not.
  - apiGroups: ["apiextensions.k8s.io"]
    resources: ["customresourcedefinitions"]
    verbs: ["list"]
  ---
  # Source: weave-gitops/templates/rolebinding.yaml
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: weave-gitops
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '4'
      internal.config.kubernetes.io/index: '4'
  subjects:
  - kind: ServiceAccount
    name: weave-gitops
    namespace: weave
  roleRef:
    kind: ClusterRole
    name: weave-gitops
    apiGroup: rbac.authorization.k8s.io
  ---
  # Source: weave-gitops/templates/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
    annotations:
      config.kubernetes.io/index: '5'
      internal.config.kubernetes.io/index: '5'
  spec:
    type: ClusterIP
    ports:
    - port: 9001
      targetPort: http
      protocol: TCP
      name: http
    selector:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  ---
  # Source: weave-gitops/templates/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: "v0.38.0"
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: weave-gitops
      weave.works/app: weave-gitops-oss
    annotations:
      config.kubernetes.io/index: '6'
      internal.config.kubernetes.io/index: '6'
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    template:
      metadata:
        labels:
          app.kubernetes.io/name: weave-gitops
          app.kubernetes.io/instance: weave-gitops
          app.kubernetes.io/part-of: weave-gitops
          weave.works/app: weave-gitops-oss
      spec:
        serviceAccountName: weave-gitops
        containers:
        - name: weave-gitops
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/weaveworks/wego-app:v0.38.0"
          imagePullPolicy: IfNotPresent
          args:
          - "--log-level"
          - "info"
          - "--insecure"
          ports:
          - name: http
            containerPort: 9001
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          env:
          - name: WEAVE_GITOPS_FEATURE_TENANCY
            value: "true"
          - name: WEAVE_GITOPS_FEATURE_CLUSTER
            value: "false"
          - name: WEAVE_GITOPS_FEATURE_GITOPS_RUNTIME
            value: "false"
          resources: {}
  
  
  '''
# ---
# name: test_build_hr_new[build-hr-single-cluster7]
  '''
  ---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx
    namespace: flux-system
  automountServiceAccountToken: true
  ---
  apiVersion: v1
  kind: ConfigMap
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: flux-system
  data: null
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
    name: ingress-nginx
  rules:
  - apiGroups:
    - ''
    resources:
    - configmaps
    - endpoints
    - nodes
    - pods
    - secrets
    - namespaces
    verbs:
    - list
    - watch
  - apiGroups:
    - coordination.k8s.io
    resources:
    - leases
    verbs:
    - list
    - watch
  - apiGroups:
    - ''
    resources:
    - nodes
    verbs:
    - get
  - apiGroups:
    - ''
    resources:
    - services
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - ''
    resources:
    - events
    verbs:
    - create
    - patch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses/status
    verbs:
    - update
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingressclasses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - discovery.k8s.io
    resources:
    - endpointslices
    verbs:
    - list
    - watch
    - get
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
    name: ingress-nginx
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: ingress-nginx
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx
    namespace: flux-system
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx
    namespace: flux-system
  rules:
  - apiGroups:
    - ''
    resources:
    - namespaces
    verbs:
    - get
  - apiGroups:
    - ''
    resources:
    - configmaps
    - pods
    - secrets
    - endpoints
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - ''
    resources:
    - services
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingresses/status
    verbs:
    - update
  - apiGroups:
    - networking.k8s.io
    resources:
    - ingressclasses
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - coordination.k8s.io
    resources:
    - leases
    resourceNames:
    - ingress-nginx-leader
    verbs:
    - get
    - update
  - apiGroups:
    - coordination.k8s.io
    resources:
    - leases
    verbs:
    - create
  - apiGroups:
    - ''
    resources:
    - events
    verbs:
    - create
    - patch
  - apiGroups:
    - discovery.k8s.io
    resources:
    - endpointslices
    verbs:
    - list
    - watch
    - get
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx
    namespace: flux-system
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ingress-nginx
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx
    namespace: flux-system
  ---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller-admission
    namespace: flux-system
  spec:
    type: ClusterIP
    ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
      appProtocol: https
    selector:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: controller
  ---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: flux-system
  spec:
    type: LoadBalancer
    ipFamilyPolicy: SingleStack
    ipFamilies:
    - IPv4
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
    selector:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/component: controller
  ---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: ingress-nginx-controller
    namespace: flux-system
  spec:
    selector:
      matchLabels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/component: controller
    replicas: 1
    revisionHistoryLimit: 10
    minReadySeconds: 0
    template:
      metadata:
        labels:
          helm.sh/chart: ingress-nginx-4.14.1
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: 1.14.1
          app.kubernetes.io/part-of: ingress-nginx
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: controller
      spec:
        dnsPolicy: ClusterFirst
        containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.14.1@sha256:f95a79b85fb93ac3de752c71a5c27d5ceae10a18b61904dec224c1c6a4581e47
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - /wait-shutdown
          args:
          - /nginx-ingress-controller
          - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
          - --election-id=ingress-nginx-leader
          - --controller-class=k8s.io/ingress-nginx
          - --ingress-class=nginx
          - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
          - --validating-webhook=:8443
          - --validating-webhook-certificate=/usr/local/certificates/cert
          - --validating-webhook-key=/usr/local/certificates/key
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 82
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            readOnlyRootFilesystem: false
          env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: LD_PRELOAD
            value: /usr/local/lib/libmimalloc.so
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: https
            containerPort: 443
            protocol: TCP
          - name: webhook
            containerPort: 8443
            protocol: TCP
          volumeMounts:
          - name: webhook-cert
            mountPath: /usr/local/certificates/
            readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
        nodeSelector:
          kubernetes.io/os: linux
        serviceAccountName: ingress-nginx
        automountServiceAccountToken: true
        terminationGracePeriodSeconds: 300
        volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission
  ---
  apiVersion: networking.k8s.io/v1
  kind: IngressClass
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: controller
    name: nginx
  spec:
    controller: k8s.io/ingress-nginx
  ---
  apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
    name: ingress-nginx-admission
  webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    matchPolicy: Equivalent
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
    - v1
    clientConfig:
      service:
        name: ingress-nginx-controller-admission
        namespace: flux-system
        port: 443
        path: /networking/v1/ingresses
  ---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: ingress-nginx-admission
    namespace: flux-system
    annotations:
      helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  automountServiceAccountToken: true
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: ingress-nginx-admission
    annotations:
      helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  rules:
  - apiGroups:
    - admissionregistration.k8s.io
    resources:
    - validatingwebhookconfigurations
    verbs:
    - get
    - update
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: ingress-nginx-admission
    annotations:
      helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: ingress-nginx-admission
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx-admission
    namespace: flux-system
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: ingress-nginx-admission
    namespace: flux-system
    annotations:
      helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  rules:
  - apiGroups:
    - ''
    resources:
    - secrets
    verbs:
    - get
    - create
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: ingress-nginx-admission
    namespace: flux-system
    annotations:
      helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ingress-nginx-admission
  subjects:
  - kind: ServiceAccount
    name: ingress-nginx-admission
    namespace: flux-system
  ---
  apiVersion: batch/v1
  kind: Job
  metadata:
    name: ingress-nginx-admission-create
    namespace: flux-system
    annotations:
      helm.sh/hook: pre-install,pre-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  spec:
    ttlSecondsAfterFinished: 0
    template:
      metadata:
        name: ingress-nginx-admission-create
        labels:
          helm.sh/chart: ingress-nginx-4.14.1
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: 1.14.1
          app.kubernetes.io/part-of: ingress-nginx
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: admission-webhook
      spec:
        containers:
        - name: create
          image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.5@sha256:03a00eb0e255e8a25fa49926c24cde0f7e12e8d072c445cdf5136ec78b546285
          imagePullPolicy: IfNotPresent
          args:
          - create
          - --host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.$(POD_NAMESPACE).svc
          - --namespace=$(POD_NAMESPACE)
          - --secret-name=ingress-nginx-admission
          env:
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
        restartPolicy: OnFailure
        serviceAccountName: ingress-nginx-admission
        automountServiceAccountToken: true
        nodeSelector:
          kubernetes.io/os: linux
  ---
  apiVersion: batch/v1
  kind: Job
  metadata:
    name: ingress-nginx-admission-patch
    namespace: flux-system
    annotations:
      helm.sh/hook: post-install,post-upgrade
      helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
    labels:
      helm.sh/chart: ingress-nginx-4.14.1
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/version: 1.14.1
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/component: admission-webhook
  spec:
    ttlSecondsAfterFinished: 0
    template:
      metadata:
        name: ingress-nginx-admission-patch
        labels:
          helm.sh/chart: ingress-nginx-4.14.1
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: 1.14.1
          app.kubernetes.io/part-of: ingress-nginx
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: admission-webhook
      spec:
        containers:
        - name: patch
          image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.5@sha256:03a00eb0e255e8a25fa49926c24cde0f7e12e8d072c445cdf5136ec78b546285
          imagePullPolicy: IfNotPresent
          args:
          - patch
          - --webhook-name=ingress-nginx-admission
          - --namespace=$(POD_NAMESPACE)
          - --patch-mutating=false
          - --secret-name=ingress-nginx-admission
          - --patch-failure-policy=Fail
          env:
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
        restartPolicy: OnFailure
        serviceAccountName: ingress-nginx-admission
        automountServiceAccountToken: true
        nodeSelector:
          kubernetes.io/os: linux
  
  '''
# ---
# name: test_build_hr_new[build-hr-single-cluster8]
  '''
  ---
  apiVersion: v1
  kind: ConfigMap
  metadata:
    name: podinfo-redis
  data:
    redis.conf: |
      maxmemory 64mb
      maxmemory-policy allkeys-lru
      save ""
      appendonly no
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo-redis
    labels:
      app: podinfo-redis
  spec:
    type: ClusterIP
    selector:
      app: podinfo-redis
    ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.5.4
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: 6.5.4
      app.kubernetes.io/managed-by: Helm
  spec:
    type: ClusterIP
    ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
    selector:
      app.kubernetes.io/name: podinfo
  ---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.5.4
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: 6.5.4
      app.kubernetes.io/managed-by: Helm
  spec:
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: podinfo
    template:
      metadata:
        labels:
          app.kubernetes.io/name: podinfo
        annotations:
          prometheus.io/scrape: 'true'
          prometheus.io/port: '9898'
      spec:
        terminationGracePeriodSeconds: 30
        containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.5.4
          imagePullPolicy: IfNotPresent
          command:
          - ./podinfo
          - --port=9898
          - --cert-path=/data/cert
          - --port-metrics=9797
          - --grpc-port=9999
          - --grpc-service-name=podinfo
          - --cache-server=tcp://podinfo-redis:6379
          - --level=info
          - --random-delay=false
          - --random-error=false
          env:
          - name: PODINFO_UI_COLOR
            value: '#34577c'
          ports:
          - name: http
            containerPort: 9898
            protocol: TCP
          - name: http-metrics
            containerPort: 9797
            protocol: TCP
          - name: grpc
            containerPort: 9999
            protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
        volumes:
        - name: data
          emptyDir: {}
  ---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo-redis
    labels:
      app: podinfo-redis
  spec:
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: podinfo-redis
    template:
      metadata:
        labels:
          app: podinfo-redis
        annotations:
          checksum/config: 34c601c9d39797bbf53d1c7a278976609301f637ec11dc0253563729dfad4f8e
      spec:
        containers:
        - name: redis
          image: redis:7.0.7
          imagePullPolicy: IfNotPresent
          command:
          - redis-server
          - /redis-master/redis.conf
          ports:
          - name: redis
            containerPort: 6379
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: redis
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - redis-cli
              - ping
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
          - mountPath: /var/lib/redis
            name: data
          - mountPath: /redis-master
            name: config
        volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: podinfo-redis
            items:
            - key: redis.conf
              path: redis.conf
  
  '''
# ---
# name: test_build_hr_new[build-hr-single-cluster9]
  '''
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.7.1
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: 6.7.1
      app.kubernetes.io/managed-by: Helm
  spec:
    type: ClusterIP
    ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
    selector:
      app.kubernetes.io/name: podinfo
  ---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: podinfo
    labels:
      helm.sh/chart: podinfo-6.7.1
      app.kubernetes.io/name: podinfo
      app.kubernetes.io/version: 6.7.1
      app.kubernetes.io/managed-by: Helm
  spec:
    replicas: 2
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: podinfo
    template:
      metadata:
        labels:
          app.kubernetes.io/name: podinfo
        annotations:
          prometheus.io/scrape: 'true'
          prometheus.io/port: '9898'
      spec:
        terminationGracePeriodSeconds: 30
        containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.7.1
          imagePullPolicy: IfNotPresent
          command:
          - ./podinfo
          - --port=9898
          - --cert-path=/data/cert
          - --port-metrics=9797
          - --grpc-port=9999
          - --grpc-service-name=podinfo
          - --level=info
          - --random-delay=false
          - --random-error=false
          env:
          - name: PODINFO_UI_COLOR
            value: '#34577c'
          ports:
          - name: http
            containerPort: 9898
            protocol: TCP
          - name: http-metrics
            containerPort: 9797
            protocol: TCP
          - name: grpc
            containerPort: 9999
            protocol: TCP
          livenessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/healthz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - podcli
              - check
              - http
              - localhost:9898/readyz
            initialDelaySeconds: 1
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
          volumeMounts:
          - name: data
            mountPath: /data
          resources:
            limits: null
            requests:
              cpu: 1m
              memory: 16Mi
        volumes:
        - name: data
          emptyDir: {}
  
  '''
# ---
# name: test_build_hr_new[build-hr-single]
  '''
  ---
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-ingress
    namespace: weave
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    ingress:
    - ports:
      - port: 9001
        protocol: TCP
    policyTypes:
    - Ingress
  ---
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-egress
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    egress:
    - {}
    policyTypes:
    - Egress
  ---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: weave-gitops
  rules:
  - apiGroups:
    - ''
    resources:
    - users
    - groups
    verbs:
    - impersonate
  - apiGroups:
    - ''
    resources:
    - secrets
    verbs:
    - get
    - list
    resourceNames:
    - cluster-user-auth
    - oidc-auth
  - apiGroups:
    - ''
    resources:
    - namespaces
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - apiextensions.k8s.io
    resources:
    - customresourcedefinitions
    verbs:
    - list
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: weave-gitops
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
  subjects:
  - kind: ServiceAccount
    name: weave-gitops
    namespace: weave
  roleRef:
    kind: ClusterRole
    name: weave-gitops
    apiGroup: rbac.authorization.k8s.io
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
  spec:
    type: ClusterIP
    ports:
    - port: 9001
      targetPort: http
      protocol: TCP
      name: http
    selector:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  ---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: weave-gitops
      weave.works/app: weave-gitops-oss
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    template:
      metadata:
        labels:
          app.kubernetes.io/name: weave-gitops
          app.kubernetes.io/instance: weave-gitops
          app.kubernetes.io/part-of: weave-gitops
          weave.works/app: weave-gitops-oss
      spec:
        serviceAccountName: weave-gitops
        containers:
        - name: weave-gitops
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: ghcr.io/weaveworks/wego-app:v0.38.0
          imagePullPolicy: IfNotPresent
          args:
          - --log-level
          - info
          - --insecure
          ports:
          - name: http
            containerPort: 9001
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          env:
          - name: WEAVE_GITOPS_FEATURE_TENANCY
            value: 'true'
          - name: WEAVE_GITOPS_FEATURE_CLUSTER
            value: 'false'
          - name: WEAVE_GITOPS_FEATURE_GITOPS_RUNTIME
            value: 'false'
          resources: {}
  
  '''
# ---
# name: test_build_hr_new[build-hr]
  '''
  ---
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-ingress
    namespace: weave
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    ingress:
    - ports:
      - port: 9001
        protocol: TCP
    policyTypes:
    - Ingress
  ---
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: allow-dashboard-egress
  spec:
    podSelector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    egress:
    - {}
    policyTypes:
    - Egress
  ---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: weave-gitops
  rules:
  - apiGroups:
    - ''
    resources:
    - users
    - groups
    verbs:
    - impersonate
  - apiGroups:
    - ''
    resources:
    - secrets
    verbs:
    - get
    - list
    resourceNames:
    - cluster-user-auth
    - oidc-auth
  - apiGroups:
    - ''
    resources:
    - namespaces
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - apiextensions.k8s.io
    resources:
    - customresourcedefinitions
    verbs:
    - list
  ---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: weave-gitops
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
  subjects:
  - kind: ServiceAccount
    name: weave-gitops
    namespace: weave
  roleRef:
    kind: ClusterRole
    name: weave-gitops
    apiGroup: rbac.authorization.k8s.io
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
  spec:
    type: ClusterIP
    ports:
    - port: 9001
      targetPort: http
      protocol: TCP
      name: http
    selector:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  ---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: weave-gitops
    namespace: weave
    labels:
      helm.sh/chart: weave-gitops-4.0.36
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
      app.kubernetes.io/version: v0.38.0
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: weave-gitops
      weave.works/app: weave-gitops-oss
  spec:
    replicas: 1
    selector:
      matchLabels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
    template:
      metadata:
        labels:
          app.kubernetes.io/name: weave-gitops
          app.kubernetes.io/instance: weave-gitops
          app.kubernetes.io/part-of: weave-gitops
          weave.works/app: weave-gitops-oss
      spec:
        serviceAccountName: weave-gitops
        containers:
        - name: weave-gitops
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: ghcr.io/weaveworks/wego-app:v0.38.0
          imagePullPolicy: IfNotPresent
          args:
          - --log-level
          - info
          - --insecure
          ports:
          - name: http
            containerPort: 9001
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          env:
          - name: WEAVE_GITOPS_FEATURE_TENANCY
            value: 'true'
          - name: WEAVE_GITOPS_FEATURE_CLUSTER
            value: 'false'
          - name: WEAVE_GITOPS_FEATURE_GITOPS_RUNTIME
            value: 'false'
          resources: {}
  
  '''
# ---
